--- a/generators/gh-maven-build/templates/build-release.yaml
+++ b/generators/gh-maven-build/templates/build-release.yaml
@@ -1,4 +1,4 @@
-name: Build and publish - <%= serviceName %>
+name: 'Build and publish - <%= serviceName %>'
 
 on:
   push:
@@ -24,14 +24,13 @@ env:
 jobs:
   preflight:
     name: Preflight
-    uses: ./.github/reusable/preflight.yaml
+    uses: ./.github/workflows/preflight.yaml
     permissions: {}
     secrets:
       token: ${{ secrets.<%= brokerJwt %> }}
 <% if (unitTestsPath) { -%>
   test:
     name: Test
-    if: ${{ ! startsWith(github.ref, 'refs/tags/v') }}
     uses: <%= unitTestsPath %>
 <% } -%>
   build-publish:
