feat: path trigger

--- a/generators/gh-maven-build/templates/build-release.yaml
+++ b/generators/gh-maven-build/templates/build-release.yaml
@@ -6,9 +6,17 @@ on:
       - 'v*'
     branches:
       - 'main'
+<% if (relativePath) { -%>
+    paths:
+      - '<%= relativePath %>/**'
+<% } -%>
   pull_request:
     branches:
       - main
+<% if (relativePath) { -%>
+    paths:
+      - '<%= relativePath %>/**'
+<% } -%>
   workflow_dispatch:
 
 concurrency:
