feat: workflow fail when merge conflict

--- a/generators/gh-nodejs-build/templates/build-release.yaml
+++ b/generators/gh-nodejs-build/templates/build-release.yaml
@@ -56,7 +56,13 @@ jobs:
             RESPONSE=$(curl -s "https://api.github.com/repos/<%= gitHubProjectSlug %>/pulls?head=<%= gitHubProjectSlug.split('/')[0] %>:${{ github.head_ref || github.ref_name }}&state=open&base=main" \
               -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
               -H "Accept: application/vnd.github+json")
-            PULL_REQUEST_NUMBER=$(echo ${RESPONSE} | jq -r .[0].number)
+            MERGEABLE=$(echo "${RESPONSE}" | jq -r .[0].mergeable)
+            PULL_REQUEST_NUMBER=$(echo "${RESPONSE}" | jq -r .[0].number)
+            if [[ "$MERGEABLE" != "true" ]]; then
+              echo "::error ::Pull request #$PULL_REQUEST_NUMBER is not mergeable… aborted."
+              echo "This can be resolved by resolving the merge conflict with the main branch."
+              exit 1
+            fi
             echo "checkout_ref=refs/pull/$PULL_REQUEST_NUMBER/merge" >> $GITHUB_OUTPUT
           else
             echo "checkout_ref=${{ github.ref_name }}" >> $GITHUB_OUTPUT
