--- a/generators/gh-nodejs-build/templates/deploy.yaml
+++ b/generators/gh-nodejs-build/templates/deploy.yaml
@@ -47,8 +47,11 @@ jobs:
             RESPONSE=$(curl -s "https://api.github.com/repos/<%= gitHubProjectSlug %>/pulls?head=<%= gitHubProjectSlug.split('/')[0] %>:${{ github.ref_name }}&state=open&base=main" \
               -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
               -H "Accept: application/vnd.github+json")
-            MERGEABLE=$(echo "${RESPONSE}" | jq -r .[0].mergeable)
             PR_NUMBER=$(echo "${RESPONSE}" | jq -r '.[0].number')
+        RESPONSE=$(curl -s "https://api.github.com/repos/<%= gitHubProjectSlug %>/pulls/$PR_NUMBER" \
+              -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+              -H "Accept: application/vnd.github+json")
+            MERGEABLE=$(echo "${RESPONSE}" | jq -r .mergeable)
             if [[ "$MERGEABLE" != "true" ]]; then
               echo "::error ::Pull request #$PR_NUMBER is not mergeable… aborted."
               echo "This error can be fixed by resolving the merge conflict with the main branch."
