--- a/generators/gh-nodejs-build/templates/deploy.yaml
+++ b/generators/gh-nodejs-build/templates/deploy.yaml
@@ -57,7 +57,7 @@ jobs:
               echo "This error can be fixed by resolving the merge conflict with the main branch."
               exit 1
             fi
-            echo "build_sha=$(echo ${RESPONSE} | jq -r .[0].merge_commit_sha)" >> $GITHUB_OUTPUT
+            echo "build_sha=$(echo ${RESPONSE} | jq -r .merge_commit_sha)" >> $GITHUB_OUTPUT
             echo "checkout_ref=refs/pull/${PR_NUMBER}/merge" >> $GITHUB_OUTPUT
             echo "package_tag=${PR_NUMBER}-merge" >> $GITHUB_OUTPUT
           else
