--- a/generators/gh-common-mono-build/templates/build-release.yaml
+++ b/generators/gh-common-mono-build/templates/build-release.yaml
@@ -14,10 +14,10 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-<% for (const serviceName of serviceNames) { -%>
-  <%= serviceName %>:
-    uses: ./.github/workflows/build-release-<%= serviceName %>.yaml
-<% if (serviceNeeds[serviceName]) { -%>
-    needs: [<%= serviceNeeds[serviceName] %>]
+<% for (const service of services) { -%>
+  <%= service.name %>:
+    uses: <%= service.workflow %>
+<% if (serviceNeeds[service.name]) { -%>
+    needs: [<%= serviceNeeds[service.name] %>]
 <% } -%>
 <% } -%>
