--- a/.github/workflows/pr-open.yml
+++ b/.github/workflows/pr-open.yml
@@ -49,6 +49,7 @@ jobs:
         with:
           context: ./
           push: true
+          platforms: linux/amd64,linux/arm64
           tags: ${{ env.REGISTRY }}/${{ github.repository }}:${{ github.event.number }}-pr
           cache-from: type=gha
           cache-to: type=gha,mode=max
