fix: only run it during build release workflow

--- a/generators/gh-common-template/preflight.yaml
+++ b/generators/gh-common-template/preflight.yaml
@@ -6,6 +6,12 @@ on:
       token:
         description: "The Broker token"
         required: true
+    inputs:
+      release_check:
+        description: "Whether to run the release package check"
+        required: false
+        default: false
+        type: boolean
 permissions: {}
 
 jobs:
@@ -20,4 +26,4 @@ jobs:
     uses: ./.github/workflows/check-release-package.yaml
     secrets:
       token: ${{ secrets.token }}
-    if: ${{ github.ref_type == 'tag' }}
+    if: ${{ github.ref_type == 'tag' && inputs.release_check == true }}
