--- a/generators/gh-maven-build/templates/build-release.yaml
+++ b/generators/gh-maven-build/templates/build-release.yaml
@@ -37,6 +37,8 @@ jobs:
     name: Preflight
     uses: ./.github/workflows/preflight.yaml
     permissions: {}
+    with:
+      release_check: true
     secrets:
       token: ${{ secrets.<%= brokerJwt %> }}
 <% if (unitTestsPath) { -%>
