feat: add deploy build artifact check

--- a/generators/gh-common-template/run-deploy.yaml
+++ b/generators/gh-common-template/run-deploy.yaml
@@ -26,6 +26,9 @@ jobs:
   preflight:
     name: Preflight
     uses: ./.github/workflows/preflight.yaml
+    with:
+      preflight_context: deploy
+      build_workflow: <%= buildWorkflowFile %>
     secrets:
       token: ${{ secrets.<%= brokerJwt %> }}
 
