--- a/generators/gh-maven-build/templates/build-release.yaml
+++ b/generators/gh-maven-build/templates/build-release.yaml
@@ -38,7 +38,9 @@ jobs:
     uses: ./.github/workflows/preflight.yaml
     permissions:
       contents: read
+      actions: read
     with:
+      preflight_context: build
       release_check: true
       catalog_info: <%= relativePath %><%= relativePath ? '/' : '' %>catalog-info.yaml
     secrets:
