fix: remove trailing colon

--- a/generators/gh-common-template/preflight.yaml
+++ b/generators/gh-common-template/preflight.yaml
@@ -39,7 +39,7 @@ jobs:
       token: ${{ secrets.token }}
 
   check-build-artifact:
-    name: Check build artifact:
+    name: Check build artifact
       uses: ./.github/workflows/check-build-artifact.yaml
       with:
         build_workflow: ${{ inputs.build_workflow }}
