feat: use catalog

--- a/generators/gh-common-template/preflight.yaml
+++ b/generators/gh-common-template/preflight.yaml
@@ -7,21 +7,16 @@ on:
         description: "The Broker token"
         required: true
     inputs:
+      catalog_info:
+        description: "The catalog file"
+        type: string
+        default: "catalog-info.yaml"
+        required: false
       release_check:
         description: "Whether to run the release package check"
         required: false
         default: false
         type: boolean
-      project_name:
-        description: "The project name"
-        type: string
-        default: ""
-        required: false
-      service_name:
-        description: "The service name"
-        type: string
-        default: ""
-        required: false
 permissions: {}
 
 jobs:
@@ -37,6 +32,5 @@ jobs:
     secrets:
       token: ${{ secrets.token }}
     with:
-      service_name: ${{ inputs.service_name }}
-      project_name: ${{ inputs.project_name }}
+      catalog_info: ${{ inputs.catalog_info }}
     if: ${{ inputs.release_check == true && github.ref_type == 'tag' }}
