Feat/preflight deploy check build (#172)
* feat: add deploy build artifact check

* fix: add check-build template

* fix: pass gitHubProjectSlug to template

* fix: jq parsing; action url output; exit when fail

* fix: remove trailing colon

* fix: indentation

* fix: missing double quote

* feat: check build artifact monorepo

* fix: parse service name from build_workflow

--- a/generators/gh-common-template/preflight.yaml
+++ b/generators/gh-common-template/preflight.yaml
@@ -12,6 +12,16 @@ on:
         type: string
         default: "catalog-info.yaml"
         required: false
+      preflight_context:
+        description: 'Determines which pre-flight checks to run. Must be in (build, deploy).'
+        default: ''
+        required: true
+        type: string
+      build_workflow:
+        description: 'Build workflow used to validate the build artifact.'
+        default: ''
+        required: false
+        type: string
       release_check:
         description: "Whether to run the release package check"
         required: false
@@ -19,6 +29,7 @@ on:
         type: boolean
 permissions:
   contents: read
+  actions: read
 
 jobs:
   check-jwt:
@@ -26,6 +37,13 @@ jobs:
     uses: ./.github/workflows/check-token.yaml
     secrets:
       token: ${{ secrets.token }}
+
+  check-build-artifact:
+    name: Check build artifact
+    uses: ./.github/workflows/check-build-artifact.yaml
+    with:
+      build_workflow: ${{ inputs.build_workflow }}
+    if: inputs.preflight_context == 'deploy'
 
   check-release-package:
     name: Check and validate release package
