--- a/generators/gh-common-mono-build/templates/build-release.yaml
+++ b/generators/gh-common-mono-build/templates/build-release.yaml
@@ -14,6 +14,7 @@ concurrency:
   cancel-in-progress: true
 
 permissions:
+  actions: read
   contents: read
   packages: write
   pull-requests: read
