--- a/generators/gh-nodejs-build/templates/deploy.yaml
+++ b/generators/gh-nodejs-build/templates/deploy.yaml
@@ -20,7 +20,7 @@ env:
   SERVICE_NAME: <%= serviceName %>
   JOB: buildByToken/buildWithParameters?job=<%= projectName %>/<%= serviceName %>
   URL: https://cd.io.nrs.gov.bc.ca
-  PACKAGE_REPO: ghcr.io/${{ github.repository }}/package
+  PACKAGE_REPO: ghcr.io/${{ github.repository }}/<%= serviceName %>
 
 jobs:
   deploy-pre-release-build:
