--- a/generators/gh-nodejs-build/templates/build-release.yaml
+++ b/generators/gh-nodejs-build/templates/build-release.yaml
@@ -159,6 +159,18 @@ jobs:
       - name: Build artifact
         run: npm run build --if-present
         working-directory: ./<%= relativePath %>
+<% if (ociArtifacts.length > 0) { _%>
+      - name: Pull static artifacts
+        run: |
+          oras login ghcr.io -u ${{ github.actor }} --password-stdin <<< ${{ secrets.GITHUB_TOKEN }}
+          <%_ for (const artifact of ociArtifacts) { _%>
+          echo "Pulling artifact <%= artifact.artifact %> to <%= artifact.output %>"
+          oras pull <%= artifact.artifact %> --output <%= artifact.output %>
+          <%_ } -%>
+        working-directory: ./<%= relativePath %>
+        env:
+          PROJECT_TAG: ${{ steps.set-version.outputs.tag }}
+<% } -%>
       - name: Publish artifact
         id: publish-artifact
         run: |
