--- a/generators/gh-common-template/check-build-artifact.yaml
+++ b/generators/gh-common-template/check-build-artifact.yaml
@@ -53,17 +53,21 @@ jobs:
           RESPONSE=$(curl -s "https://api.github.com/repos/<%= gitHubProjectSlug %>/actions/workflows/${{ inputs.build_workflow }}/runs?head_sha=${{ github.sha }}&branch=${{ github.ref_name }}" \
             -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
             -H "Accept: application/vnd.github+json")
-          if [[ -n $RESPONSE ]]; then
+          { read -r TOTAL_COUNT; } < <(jq -r '.total_count // 0' <<< "$RESPONSE")
+          if [[ -n $RESPONSE && $TOTAL_COUNT -gt 0 ]]; then
             # top-level workflow - get the workflow run directly
             { read -r BUILD_ACTION_NAME; read -r BUILD_ACTION_STATUS; read -r BUILD_ACTION_URL; } < <(jq -r '.workflow_runs | sort_by(.run_number) | reverse | .[0] | .name // "", .conclusion // "", .html_url // ""' <<< "$RESPONSE")
           else
             # monorepo build - lookup build status by job id
+            RESPONSE=$(curl -s "https://api.github.com/repos/<%= gitHubProjectSlug %>/actions/workflows/build-release.yaml/runs?head_sha=${{ github.sha }}&branch=${{ github.ref_name }}" \
+              -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+              -H "Accept: application/vnd.github+json")
             { read -r BUILD_ACTION_ID; } < <(jq -r '.workflow_runs | sort_by(.run_number) | reverse | .[0] | .id // ""' <<< "$RESPONSE")
             if [[ "$BUILD_ACTION_ID" != "" ]]; then
               JOB_RESPONSE=$(curl -s "https://api.github.com/repos/<%= gitHubProjectSlug %>/actions/runs/$BUILD_ACTION_ID/jobs" \
                 -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
                 -H "Accept: application/vnd.github+json")
-              { read -r BUILD_ACTION_NAME; read -r BUILD_ACTION_STATUS; read -r BUILD_ACTION_URL; } < <(jq -r '.jobs | map(select(.name == "Build and publish - '"$SERVICE_NAME"'")).[] | .name // "", .conclusion // "", .html_url // ""' <<< "$JOB_RESPONSE")
+              { read -r BUILD_ACTION_NAME; read -r BUILD_ACTION_STATUS; read -r BUILD_ACTION_URL; } < <(jq -r '.jobs | map(select(.name == "'"$SERVICE_NAME"' / Build and publish")).[] | .name // "", .conclusion // "", .html_url // ""' <<< "$JOB_RESPONSE")
             fi
           fi
           if [[ "$BUILD_ACTION_URL" != "" ]]; then
