--- a/generators/gh-common-template/check-build-artifact.yaml
+++ b/generators/gh-common-template/check-build-artifact.yaml
@@ -3,9 +3,13 @@ name: Check build artifact
 on:
   workflow_call:
     inputs:
+      catalog_info:
+        description: "The catalog file"
+        type: string
+        default: "catalog-info.yaml"
+        required: false
       build_workflow:
         description: "Build workflow used to validate the build artifact."
-        default: ''
         type: string
         required: true
 permissions: {}
@@ -16,26 +20,53 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       actions: read
+      contents: read
     steps:
+      - name: Checkout only catalog-info.yaml
+        uses: actions/checkout@v6
+        with:
+          sparse-checkout: |
+            ${{ inputs.catalog_info }}
+          sparse-checkout-cone-mode: false
+
+      - name: Verify catalog file exists
+        run: |
+          if [[ ! -f "${{ inputs.catalog_info }}" ]]; then
+            echo "Error: catalog file not found at ${{ inputs.catalog_info }}"
+            exit 1
+          fi
+          echo "Catalog file found: ${{ inputs.catalog_info }}"
+
       - name: Check build artifact
         shell: bash
         run: |
-          RESPONSE=$(curl -s "https://api.github.com/repos/<%= gitHubProjectSlug %>/actions/workflows/build-release.yaml/runs?head_sha=${{ github.sha }}&branch=${{ github.ref_name }}" \
+          CATALOG_FILE="${{ inputs.catalog_info }}"
+          # Parse project (spec.system) and service (metadata.name) from the Backstage catalog-info YAML using yq
+          PROJECT_NAME="$(yq e '.spec.system // ""' "$CATALOG_FILE" | tr -d '\r')"
+          SERVICE_NAME="$(yq e '.metadata.name // ""' "$CATALOG_FILE" | tr -d '\r')"
+
+          if [ -z "$PROJECT_NAME" ] || [ -z "$SERVICE_NAME" ]; then
+            echo "Failed to parse project or service name from $CATALOG_FILE (spec.system=${PROJECT_NAME:-<empty>}, metadata.name=${SERVICE_NAME:-<empty>})"
+            exit 1
+          fi
+
+          RESPONSE=$(curl -s "https://api.github.com/repos/<%= gitHubProjectSlug %>/actions/workflows/${{ inputs.build_workflow }}/runs?head_sha=${{ github.sha }}&branch=${{ github.ref_name }}" \
             -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
             -H "Accept: application/vnd.github+json")
-          if [[ ${{ inputs.build_workflow }} == "build-release.yaml" ]]; then
+          { read -r TOTAL_COUNT; } < <(jq -r '.total_count // 0' <<< "$RESPONSE")
+          if [[ -n $RESPONSE && $TOTAL_COUNT -gt 0 ]]; then
+            # top-level workflow - get the workflow run directly
             { read -r BUILD_ACTION_NAME; read -r BUILD_ACTION_STATUS; read -r BUILD_ACTION_URL; } < <(jq -r '.workflow_runs | sort_by(.run_number) | reverse | .[0] | .name // "", .conclusion // "", .html_url // ""' <<< "$RESPONSE")
           else
-            # lookup monorepo build status by job id
+            # monorepo build - lookup build status by job id
+            RESPONSE=$(curl -s "https://api.github.com/repos/<%= gitHubProjectSlug %>/actions/workflows/build-release.yaml/runs?head_sha=${{ github.sha }}&branch=${{ github.ref_name }}" \
+              -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+              -H "Accept: application/vnd.github+json")
             { read -r BUILD_ACTION_ID; } < <(jq -r '.workflow_runs | sort_by(.run_number) | reverse | .[0] | .id // ""' <<< "$RESPONSE")
             if [[ "$BUILD_ACTION_ID" != "" ]]; then
               JOB_RESPONSE=$(curl -s "https://api.github.com/repos/<%= gitHubProjectSlug %>/actions/runs/$BUILD_ACTION_ID/jobs" \
                 -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
                 -H "Accept: application/vnd.github+json")
-              SERVICE_NAME="${{ inputs.build_workflow }}"
-              # trim SERVICE_NAME from build_workflow (ex. build-release-<service_name>.yaml --> <service_name>)
-              # trim first 14 characters (build-release-) and last 5 characters (.yaml)
-              SERVICE_NAME="${SERVICE_NAME:14:$((${#SERVICE_NAME} - 19))}"
               { read -r BUILD_ACTION_NAME; read -r BUILD_ACTION_STATUS; read -r BUILD_ACTION_URL; } < <(jq -r '.jobs | map(select(.name == "'"$SERVICE_NAME"' / Build and publish")).[] | .name // "", .conclusion // "", .html_url // ""' <<< "$JOB_RESPONSE")
             fi
           fi
@@ -44,8 +75,13 @@ jobs:
           else
             echo "Unable to parse build action url."
           fi
+          if [[ "$BUILD_ACTION_STATUS" == "in_progress" || "$BUILD_ACTION_STATUS" == "queued" || "$BUILD_ACTION_STATUS" == "requested" ]]; then
+            echo "::error ::Last '${BUILD_ACTION_NAME:-build-release}' is in progress."
+            echo "This deploy was triggered on ${{ github.ref_name }} branch with the ${{ github.sha }} commit hash which does not have a successful build. Please wait for the build to complete successfully before triggering a deploy."
+            exit 1
+          fi
           if [[ "$BUILD_ACTION_STATUS" != "success" ]]; then
-            echo "::error ::Last '${BUILD_ACTION_NAME:-${{ inputs.build_workflow }}}' was not 'success' or does not exist."
+            echo "::error ::Last '${BUILD_ACTION_NAME:-build-release}' was not 'success' or does not exist."
             echo "This deploy was triggered on ${{ github.ref_name }} branch with the ${{ github.sha }} commit hash which does not have a successful build. Please examine the build output and ensure a build is successful before triggering a deploy."
             exit 1
           fi
