fix: update jasper pipeline to pass preflight_context

--- a/generators/pd-jasper-reports/templates/run-jasper-reports-workflow.yaml
+++ b/generators/pd-jasper-reports/templates/run-jasper-reports-workflow.yaml
@@ -24,6 +24,8 @@ jobs:
   preflight:
     name: Preflight
     uses: ./.github/workflows/preflight.yaml
+    with:
+      preflight_context: deploy-jasper
     secrets:
       token: ${{ secrets.<%= brokerJwt %> }}
 
