--- a/generators/gh-common-template/preflight.yaml
+++ b/generators/gh-common-template/preflight.yaml
@@ -13,7 +13,7 @@ on:
         default: "catalog-info.yaml"
         required: false
       preflight_context:
-        description: 'Determines which pre-flight checks to run. Must be in (build, deploy).'
+        description: 'Determines which pre-flight checks to run. Must be in (build, deploy, deploy-jasper).'
         default: ''
         required: true
         type: string
