--- a/generators/gh-maven-build/templates/build-release.yaml
+++ b/generators/gh-maven-build/templates/build-release.yaml
@@ -98,6 +98,10 @@ jobs:
             fetch-depth: 0
             fetch-tags: true
             ref: ${{ steps.lookup-pr-merge-ref.outputs.checkout_ref }}
+<% if (ociArtifacts.length > 0) { _%>
+      - name: Setup ORAS
+        uses: oras-project/setup-oras@v1
+<% } -%>
       - name: Set up Java
         uses: actions/setup-java@v5
         with:
