--- a/generators/gh-maven-build/templates/build-release.yaml
+++ b/generators/gh-maven-build/templates/build-release.yaml
@@ -99,6 +99,29 @@ jobs:
             fetch-tags: true
             ref: ${{ steps.lookup-pr-merge-ref.outputs.checkout_ref }}
 <% if (ociArtifacts.length > 0) { _%>
+      - name: Set version
+        working-directory: ./<%= relativePath %>
+        id: set-version
+        run: |
+          REF_NAME="${{ github.ref_name }}"
+          SAFE_REF_NAME=$(echo "$REF_NAME" | tr '/' '-')
+
+          if [[ ${{ startsWith(github.ref, 'refs/heads/') }} = true ]]; then
+            version=$(cat package.json | jq -r '.version')
+            echo "project_version=$version-${SAFE_REF_NAME}" >> "$GITHUB_OUTPUT"
+            echo "tag=${SAFE_REF_NAME}" >> "$GITHUB_OUTPUT"
+          fi
+          if [[ ${{ startsWith(github.ref, 'refs/pull/') }} = true ]]; then
+            version=$(cat package.json | jq -r '.version')
+            echo "project_version=$version-${SAFE_REF_NAME}" >> "$GITHUB_OUTPUT"
+            echo "tag=${SAFE_REF_NAME}" >> "$GITHUB_OUTPUT"
+          fi
+          if [[ ${{ startsWith(github.ref, 'refs/tags/v') }} = true ]]; then
+            echo "tag=${{ github.ref_name }}" >> "$GITHUB_OUTPUT"
+            TAG=${{ github.ref_name }}
+            version="${TAG#v}"
+            echo "project_version=$version" >> $GITHUB_OUTPUT
+          fi
       - name: Setup ORAS
         uses: oras-project/setup-oras@v1
 <% } -%>
