feat: add java version as prompt (#177)
* feat: add java version as prompt

* chore: update instructions

--- a/generators/gh-maven-build/templates/deploy.yaml
+++ b/generators/gh-maven-build/templates/deploy.yaml
@@ -119,7 +119,7 @@ jobs:
       - name: Set up Java
         uses: actions/setup-java@v5
         with:
-          java-version: '8'
+          java-version: '<%= javaVersion %>'
           distribution: 'temurin'
           cache: maven
       - name: Set download URL
@@ -264,7 +264,7 @@ jobs:
       - name: Set up Java
         uses: actions/setup-java@v5
         with:
-          java-version: '8'
+          java-version: '<%= javaVersion %>'
           distribution: 'temurin'
           cache: maven
       - name: Set download URL
