fix: extra comma

--- a/generators/gh-nodejs-build/templates/build-release.yaml
+++ b/generators/gh-nodejs-build/templates/build-release.yaml
@@ -194,7 +194,7 @@ jobs:
               "org.opencontainers.image.licenses": "<%= license %>",
               "org.opencontainers.image.source": "${{ github.repositoryUrl }}",
               "org.opencontainers.image.title": "<%= serviceName %>-artifact",
-              "org.opencontainers.image.version": "${PROJECT_TAG}",
+              "org.opencontainers.image.version": "${PROJECT_TAG}"
             }
           }
           EOF
